--- a/demo-server-ext-web/src/main/resources/application-local.properties
+++ b/demo-server-ext-web/src/main/resources/application-local.properties
@@ -6,7 +6,7 @@ server.context-path=
 # The servlet path for the servlet dispatcher: the path would be {protocol}:{ip}:{port}/{context-path}/{servlet-path}/{api-path} if configured
 server.servlet-path=
 # The display name of the application
-server.display-name=Demo Server (Extensive) Application
+server.display-name=Demo Server Extensive Application
 
 ### Configuration regarding Spring ###
 # The name of the application
