--- a/demo-server-ext-web/pom.xml
+++ b/demo-server-ext-web/pom.xml
@@ -283,7 +283,7 @@
                                     <artifactId>${project.artifactId}</artifactId>
                                     <version>${project.version}</version>
                                     <type>${project.packaging}</type>
-                                    <destFileName>${parent.artifactId}-${env}.jar</destFileName>
+                                    <destFileName>${project.parent.artifactId}-${env}.jar</destFileName>
                                 </artifactItem>
                             </artifactItems>
                             <outputDirectory>target</outputDirectory>
@@ -304,6 +304,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
+                <version>2.6</version>
                 <configuration>
                     <encoding>${project.build.sourceEncoding}</encoding>
                     <useDefaultDelimiters>true</useDefaultDelimiters>
